--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       </form>
     </section>
 
+    <p class="footer">&copy;givizi.n</p>
+
     <section class="res">
       <div class="containerRes" id="divTotal">
         <div class="contTotal">
